[telepathy-gabble] Update to version 0.18.4 and remove python2 dependencies. Fixes JB#51077
Update to latest upstream verion. Replace python2 with python3.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "telepathy-gabble"]
 	path = telepathy-gabble
-	url = http://anongit.freedesktop.org/git/telepathy/telepathy-gabble.git
+	url = https://git.sailfishos.org/mirror/telepathy-gabble.git
