--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "telepathy-gabble"]
 	path = telepathy-gabble
-	url = https://git.sailfishos.org/mirror/telepathy-gabble.git
+	url = https://github.com/sailfishos-mirror/telepathy-gabble.git
